--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,4 @@
 ACC_KEY = ""
-RPC_LINK = "https://bsc-dataseed.binance.org/"
-NETWORK_ID = 56
-GAS_PRICE = 5000000000
+RPC_LINK = "https://polygon-rpc.com"
+NETWORK_ID = 137
+GAS_PRICE = 33000000000
